{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "6174a065-e97d-4e79-aabc-c2b4735200f4",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "41989b97-f27e-4c71-b9d5-1794fb1ce01d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClickPosition",
                    "type": "Value",
                    "id": "2f576953-3e88-40e9-aa88-a991d38495b8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "ea163fd0-5486-4a80-bfa6-dfe9dc05927a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a3b1a905-473e-4453-aab5-6f2b66d5cec0",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13e19654-f24f-4e42-9fb3-cdee19894598",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24326e87-c263-4916-b63a-66940f5277ce",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}